[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fallout DeMakeUs Sprites/Sprite tiles/Props/Quest_item.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Quest_item.gd" type="Script" id=2]
[ext_resource path="res://Fallout DeMakeUs Sprites/fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fallout DeMakeUs Sprites/Pip_boy/Text_arrow_green.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5625, 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), null ],
"loop": true,
"name": "arrow_blink",
"speed": 5.0
} ]

[node name="Quest_Item" type="Area2D"]
pause_mode = 2
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Info_box" type="Popup" parent="CanvasLayer"]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.987
anchor_right = 0.5
anchor_bottom = 0.987
margin_left = -463.0
margin_top = -71.2
margin_right = 49.0
margin_bottom = -7.20001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Info_box"]
modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "hello"
text = "hello"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_arrow" type="AnimatedSprite" parent="CanvasLayer/Info_box"]
position = Vector2( 498, 53 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "arrow_blink"
frame = 1

[node name="End_convo" type="Button" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 55.6202
margin_top = 543.195
margin_right = 67.6202
margin_bottom = 563.195
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="pressed" from="CanvasLayer/End_convo" to="." method="_on_End_convo_pressed"]
